# realtime-web-comparison

./: .gitignore  README.md  flake.nix
client/static/: index.html
client/static/js/: common.js  sse.js  webrtc.js  websocket.js
server-sent-events/axum-sse/: Cargo.toml
server-sent-events/axum-sse/src/: main.rs
server-sent-events/go-sse/: go.mod  main.go
webrtc/: go.mod  main.go
webrtc/pion-server/: go.sum  main.go
webrtc/str0m-server/: Cargo.toml
webrtc/str0m-server/src/: main.rs
webrtc/webrtc-rs-server/: Cargo.toml
webrtc/webrtc-rs-server/src/: main.rs
websocket/: main.go
websocket/gorilla-server/: go.mod  main.go
websocket/tungstenite-server/: Cargo.toml
websocket/tungstenite-server/src/: main.rs
