[package]
name = "webrtc-rs-server"
version = "0.1.0"
edition = "2024"

[dependencies]
webrtc = "0.14.0"
interceptor = "0.15.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "full"] }
tungstenite = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustls = {version = "0.23", features = ["ring"]}
rustls-pki-types = "1.13.0"
anyhow = "1.0.100"
