[package]
name = "webrtc-rs-server"
version = "0.1.0"
edition = "2024"

[dependencies]
webrtc = "0.14.0"
interceptor = "0.15.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustls = {version = "0.23", features = ["ring"]}
rustls-pki-types = "1.13.0"
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["ws"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
axum-extra = { version = "0.12.1", features = ["typed-header"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tracing = "0.1.41"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
bytes = { version = "1.10.1", features = ["serde"] }
